add balance curve